<resources>
    <string name="app_name">Typical Weather App</string>

    <!-- Drawer -->
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="about">About</string>
    <string name="drawer_app_name">Typical\n\t\t\t\t\t\tWeather\n\t\t\t\t\t\t\t\t\t\t\t\tApplication</string>

    <!-- Settings -->
    <string name="units">Units</string>

    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>

    <string name="general">General</string>

    <string name="language">Language</string>
    <string name="color_theme">Color theme</string>
    <string name="system">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>

    <!-- About -->
    <string name="by_author">by Alex Deadman</string>
    <string name="version">Version 1.0</string>
    <string name="release_date">November 2</string>
    <string name="release_year">2021</string>

    <!-- Units -->
    <string name="c">˚C</string>
    <string name="f">˚F</string>
    <string name="m_s">m/s</string>
    <string name="km_h">km/h</string>
    <string name="mmhg">mmHg</string>
    <string name="hpa">hPa</string>

    <!-- Placeholders -->
    <string name="temperature_c">%1$d˚C</string>
    <string name="temperature_f">%1$d˚F</string>

    <string name="humidity_p">%1$d%%</string>

    <string name="wind_speed_m_s">%1$.2f m/s</string>
    <string name="wind_speed_km_h">%1$.2f km/h</string>

    <string name="pressure_hpa">%1$d hPa</string>
    <string name="pressure_mmhg">%1$d mmHg</string>

    <!-- Other -->
    <string name="week_forecast">Week forecast</string>
    <string name="previous">Previous</string>
    <string name="network_error">Network error</string>
    <string name="search">Search</string>
    <string name="add_city">Add city</string>
    <string name="not_found">Not found</string>
    <string name="empty">Empty</string>
    <string name="city_not_chosen">City not chosen</string>
</resources>