<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_thermometer"
            app:key="units_temp"
            app:summaryOff="@string/c"
            app:summaryOn="@string/f"
            app:title="@string/temperature" />
    </PreferenceCategory>

    <PreferenceCategory>
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_breeze"
            app:key="units_speed"
            app:summaryOff="@string/m_s"
            app:summaryOn="@string/km_h"
            app:title="@string/wind_speed" />
    </PreferenceCategory>

    <PreferenceCategory>
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_barometer"
            app:key="units_pressure"
            app:summaryOn="@string/mmhg"
            app:summaryOff="@string/hpa"
            app:title="@string/pressure" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>