<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <soup.neumorphism.NeumorphCardView
        style="@style/CardStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="120dp"
        app:neumorph_shapeType="pressed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="27sp"
            android:background="@android:color/transparent"
            android:layout_marginVertical="18dp"
            android:layout_marginHorizontal="25dp"
            android:text="@string/app_name"
            android:textColor="?attr/editTextColor"/>

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        style="@style/CardStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-12dp"
        android:layout_marginEnd="-12dp"
        android:layout_marginBottom="-40dp"
        app:neumorph_shapeAppearance="@style/PreferenceCardsShapeAppearance">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_itmo_university"
                android:textColor="?attr/editTextColor"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/version"
                android:textSize="14sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/release_year"
                    android:textColor="?attr/editTextColor"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </soup.neumorphism.NeumorphCardView>

</androidx.appcompat.widget.LinearLayoutCompat>